<resources>
    <string name="app_name">CalendarApi</string>
    <string name="not_log_in">no logeo</string>
    <string name="time_12am">12:00</string>
    <string name="time_1am">01:00</string>
    <string name="time_2am">02:00</string>
    <string name="time_3am">03:00</string>
    <string name="time_4am">04:00</string>
    <string name="time_5am">05:00</string>
    <string name="time_6am">06:00</string>
    <string name="time_7am">07:00</string>
    <string name="time_8am">08:00</string>
    <string name="time_9am">09:00</string>
    <string name="time_10am">10:00</string>
    <string name="time_11am">11:00</string>
    <string name="time_12pm">12:00</string>
    <string name="time_13pm">13:00</string>
    <string name="time_14pm">14:00</string>
    <string name="time_15pm">15:00</string>
    <string name="time_16pm">16:00</string>
    <string name="time_17pm">17:00</string>
    <string name="time_18pm">18:00</string>
    <string name="time_19pm">19:00</string>
    <string name="time_20pm">20:00</string>
    <string name="time_21pm">21:00</string>
    <string name="time_22pm">22:00</string>
    <string name="time_23pm">23:00</string>
    <string name="time_24pm">24:00</string>
    <string name="descripcionTitle">Descripcion</string>
</resources>
