<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/layout_background_apps"
    tools:context=".activities.CalendarioActivity">

    <TextView
        android:id="@+id/textMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"/>
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/textFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="12"
                android:paddingLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"/>
            <TextView
                android:id="@+id/textWeak"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="hola"
                android:paddingLeft="16dp"
                />

        </LinearLayout>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="1500dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_12am"
                    android:paddingTop="20dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_1am"
                    android:paddingTop="80dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_2am"
                    android:paddingTop="140dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_3am"
                    android:paddingTop="200dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_4am"
                    android:paddingTop="260dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_5am"
                    android:paddingTop="320dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_6am"
                    android:paddingTop="380dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_7am"
                    android:paddingTop="440dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_8am"
                    android:paddingTop="500dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_9am"
                    android:paddingTop="560dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_10am"
                    android:paddingTop="620dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_11am"
                    android:paddingTop="680dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_12pm"
                    android:paddingTop="740dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_13pm"
                    android:paddingTop="800dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_14pm"
                    android:paddingTop="860dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_15pm"
                    android:paddingTop="920dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_16pm"
                    android:paddingTop="980dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_17pm"
                    android:paddingTop="1040dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_18pm"
                    android:paddingTop="1100dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_19pm"
                    android:paddingTop="1160dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_20pm"
                    android:paddingTop="1220dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_21pm"
                    android:paddingTop="1280dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_22pm"
                    android:paddingTop="1340dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_23pm"
                    android:paddingTop="1400dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:text="@string/time_24pm"
                    android:paddingTop="1460dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/left_event_column"
                android:layout_width="0dp"
                android:layout_height="1500dp"
                android:layout_weight="8">
                <ListView
                    android:id="@+id/listaEvento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF">
                </ListView>


            </RelativeLayout>



        </LinearLayout>
    </ScrollView>



</LinearLayout>